--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "chai": "^4.1.2",
     "istanbul": "^0.4.5",
     "mocha": "^4.0.1"
+  },
+  "dependencies": {
+    "benchmark": "^2.1.4"
   }
 }
