--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "istanbul": "^0.4.5",
+    "jest": "^21.2.1",
     "mocha": "^4.0.1"
   },
   "dependencies": {
